--- a/2017_09_25/css/styles.css
+++ b/2017_09_25/css/styles.css
@@ -1,6 +1,59 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
     font-family: "helvetica"
 }
+.horizontal{
+  overflow: auto;
+  background: linear-gradient(black,gray);
+}
+.horizontal ul{
+  list-style: none;
+}
+.horizontal ul li{
+  float: left;
+  font-family: "Segoe UI",Arial,sans-serif
+}
+.horizontal ul li a{
+  display: block;
+  color: white;
+  padding: 14px;
+  text-decoration: none;
+}
+.horizontal ul li a:hover{
+  background-color: #D3D3D3;
+  color: black;
+}
+.titulo{
+  overflow: auto;
+  background-color:white ;
+}
+.titulo h1{
+  float: left;
+  font-family: fontawesome;
+  margin: 15px;
+}
+.titulo a{
+  float: right;;
+  font-family: fontawesome;
+  margin: 15px;
+  text-decoration: none;
+  color: black;
+}
+
+.sumir{
+  display: none;
+}
+
+.ativo{
+  display: inline;
+}
+
+
+
 .box {
     width: 200px;
     height: 200px;
@@ -39,7 +92,7 @@ h1 {
 
 .customize{
     background-image: linear-gradient(to bottom, transparent, rgba(0,0,0,.3));
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
     border-radius: 10px;
 }
 
