--- a/2017_09_25/css/styles.css
+++ b/2017_09_25/css/styles.css
@@ -27,6 +27,10 @@ body {
   background-color: #D3D3D3;
   color: black;
 }
+.active{
+  background-color: #D3D3D3;
+  color: black;
+}
 .titulo{
   overflow: auto;
   background-color:white ;
